--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a:visited{
     font-variation-settings:
       "wdth" 100;
   }
-h1{
+h1, h2{
     color: black;
     text-align: center;
     text-transform: uppercase;
@@ -174,11 +174,21 @@ footer em{
 section{
     max-width: 50%;
     text-align: center;
+    padding: 2rem;
 }
 
 section img {
     width: 50%;
+    margin: 5rem 0;
+    filter: drop-shadow(2px 2px 2px black);
 }
+
+section img:hover{
+    transform: scale(1.1);
+    filter: brightness(1.1);
+    transition: 0.5s ease-in-out;
+}
+
 article{
     color: black;
     font-size: 1.5rem;
@@ -186,6 +196,12 @@ article{
 }
 
 
+@media (max-width: 1000px) {
+    section{
+        max-width: 70%;
+    }
+
+}    
 @media (max-width: 800px) {
     #logo{
         display: none;
@@ -201,9 +217,6 @@ article{
         top: 0;
         left: 0;
         z-index: 900;
-    }
-    body{
-        margin-top: 8rem;
     }
 
     #navbar{
@@ -262,6 +275,7 @@ article{
     }
     section{
         max-width: 90%;
+        margin-top: 8rem;
     }
 
 }
