--- a/style.css
+++ b/style.css
@@ -415,7 +415,49 @@ article{
 }
 
 
+form {
+    display: flex;
+    flex-direction: column;
+}
 
+.form-field {
+    margin-bottom: 20px;
+}
+
+.form-field label {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+.form-field input,
+.form-field textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+}
+
+.form-field textarea {
+    resize: vertical;
+}
+
+.form-field button {
+    background-color: #2e8b57;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.form-field button:hover {
+    background-color: #256e43;
+}
 
 
 
