--- a/style.css
+++ b/style.css
@@ -544,12 +544,15 @@ form {
         color: white;
         transform: scale(1.4);
     }
-    h1{
-        font-size: 2rem;
-    }
     .normal-section{
-        max-width: 90%;
+        max-width: 100%;
         margin-top: 8rem;
+        padding: 0;
+    }
+    .square{
+        width: 100%;
+        padding: 1rem;
+        padding: 2rem;
     }
 
 }
@@ -560,17 +563,17 @@ form {
     #logo-napis{
         font-size: 200%;
     }
-    h1{
-        font-size: 1rem;
-    }
-    h2{
-        font-size: 0.6rem;
-    }
     article{
         font-size: 1rem;
     }
+    .square{
+        padding: 1rem;
+    }
     .center-img img{
-        width: 80%;
+        width: 100%;
+    }
+    .normal-section{
+        width: 100%;
     }
 
 }
