finalna wersja bez dokumentacji

--- a/style.css
+++ b/style.css
@@ -303,7 +303,11 @@ article{
 .post-content {
     font-size: 16px;
     line-height: 1.6;
-    color: #333;
+    color: black;
+}
+
+.post-form textarea{
+    color: black;
 }
 
 .post-content p {
